--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -22,7 +22,7 @@ libc = { workspace = true }
 log = { workspace = true }
 netns-rs = { workspace = true }
 object = { workspace = true, features = ["elf", "read_core", "std"] }
-rand = { workspace = true, features = ["std", "std_rng"] }
+rand = { workspace = true, features = ["thread_rng"] }
 rbpf = { workspace = true }
 test-case = { workspace = true }
 test-log = { workspace = true, features = ["log"] }
