gen: remove pointless "update"
libbpf is a submodule, so its version is already effectively pinned.
`xtask codegen` also runs `git submodule update` which reverts the
action of updating to `origin/HEAD`. Remove the cruft.

--- a/.github/workflows/gen.yml
+++ b/.github/workflows/gen.yml
@@ -11,14 +11,6 @@ jobs:
         with:
           submodules: recursive
 
-      - name: update libbpf
-        working-directory: xtask/libbpf
-        run: |
-          set -euxo pipefail
-          git fetch origin
-          git checkout origin/HEAD
-          echo "LIBBPF_SHA=$(git rev-parse HEAD)" >> $GITHUB_ENV
-
       - uses: dtolnay/rust-toolchain@nightly
         with:
           components: rustfmt, clippy
@@ -33,6 +25,9 @@ jobs:
 
       - run: cargo xtask codegen
       - run: cargo xtask public-api --bless
+
+      - run: echo "LIBBPF_SHA=$(git rev-parse HEAD)" >> $GITHUB_ENV
+        working-directory: xtask/libbpf
 
       - uses: peter-evans/create-pull-request@v7
         with:
