--- a/.github/workflows/gen.yml
+++ b/.github/workflows/gen.yml
@@ -1,6 +1,14 @@
 name: codegen
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - main
+
+  schedule:
+    - cron: 00 4 * * *
+
+  workflow_dispatch:
 
 jobs:
   codegen:
