Correctly specify git dependency
Fixes #1178.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,4 +108,4 @@ codegen-units = 1
 
 [patch.crates-io]
 # TODO: Remove when https://github.com/rust-random/getrandom/commit/b75db5cede302bc9734f5bf2b9048a6e05c7f11e appears in a release.
-getrandom = { git = "https://github.com/rust-random/getrandom.git#b75db5cede302bc9734f5bf2b9048a6e05c7f11e" }
+getrandom = { git = "https://github.com/rust-random/getrandom.git", rev = "b75db5cede302bc9734f5bf2b9048a6e05c7f11e" }
