ci: run on all branches
It is especially common to run CI on non-main branches in forks. This
shouldn't have any impact on how many CI jobs we run in the main aya
repo if contributors follow a fork-centric workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,9 @@ name: aya-ci
 
 on:
   push:
-    branches:
-      - main
+    branches-ignore: 'create-pull-request/**'
 
   pull_request:
-    branches:
-      - main
 
   schedule:
     - cron: 00 4 * * *
