--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,7 +162,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - name: bpf-linker
-        run: cargo install bpf-linker --git https://github.com/aya-rs/bpf-linker.git
+        run: cargo install --git https://github.com/aya-rs/bpf-linker.git
 
       - uses: taiki-e/install-action@cargo-hack
       - name: Build
@@ -283,7 +283,7 @@ jobs:
         # --force so that bpf-linker gets always relinked against the latest LLVM downloaded above.
         #
         # Do this on all system (not just macOS) to avoid relying on rustc-provided libLLVM.so.
-        run: cargo install --force bpf-linker --git https://github.com/aya-rs/bpf-linker.git --no-default-features
+        run: cargo install --git https://github.com/aya-rs/bpf-linker.git --no-default-features --force
 
       - name: Cache test cache
         uses: actions/cache@v4
