aya-tool: do not attempt to run rustfmt
This can be done externally. Do so in CI.

This is an attempt to resolve the inconsistency between CI and local
rustfmt in the generated bindings.

Restore running CI on generated branches; the presence of a PR is
apparently not enough.

--- a/.github/workflows/gen.yml
+++ b/.github/workflows/gen.yml
@@ -32,6 +32,7 @@ jobs:
 
       - run: cargo xtask codegen
       - run: cargo xtask public-api --bless
+      - run: cargo fmt --all
 
       - run: echo "LIBBPF_SHA=$(git rev-parse HEAD)" >> $GITHUB_ENV
         working-directory: xtask/libbpf
