--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,6 @@ name: aya-ci
 
 on:
   push:
-    branches-ignore: 'create-pull-request/**'
 
   pull_request:
 
@@ -32,20 +31,15 @@ jobs:
         with:
           tool: cargo-hack,taplo-cli
 
-      - name: Check C formatting
-        run: git ls-files -- '*.c' '*.h' | xargs clang-format --dry-run --Werror
+      - run: git ls-files -- '*.c' '*.h' | xargs clang-format --dry-run --Werror
 
-      - name: Check Markdown
-        uses: DavidAnson/markdownlint-cli2-action@v19
+      - uses: DavidAnson/markdownlint-cli2-action@v19
 
-      - name: Check TOML formatting
-        run: taplo fmt --check
+      - run: taplo fmt --check
 
-      - name: Check formatting
-        run: cargo +nightly fmt --all -- --check
+      - run: cargo +nightly fmt --all -- --check
 
-      - name: Run clippy
-        run: ./clippy.sh
+      - run: ./clippy.sh
 
       - run: cargo xtask public-api
         if: github.event_name == 'pull_request'
@@ -161,10 +155,10 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
 
-      - name: bpf-linker
-        run: cargo install --git https://github.com/aya-rs/bpf-linker.git
+      - run: cargo install --git https://github.com/aya-rs/bpf-linker.git
 
       - uses: taiki-e/install-action@cargo-hack
+
       - name: Build
         env:
           CARGO_CFG_BPF_TARGET_ARCH: ${{ matrix.bpf_target_arch }}
@@ -278,15 +272,13 @@ jobs:
             tar -xJ --strip-components 2 -C /tmp/rustc-llvm
           echo /tmp/rustc-llvm/bin >> $GITHUB_PATH
 
-      - name: bpf-linker
-        # NB: rustc doesn't ship libLLVM.so on macOS, so disable proxying (default feature). We also
-        # --force so that bpf-linker gets always relinked against the latest LLVM downloaded above.
-        #
-        # Do this on all system (not just macOS) to avoid relying on rustc-provided libLLVM.so.
-        run: cargo install --git https://github.com/aya-rs/bpf-linker.git --no-default-features --force
+      # NB: rustc doesn't ship libLLVM.so on macOS, so disable proxying (default feature). We also
+      # --force so that bpf-linker gets always relinked against the latest LLVM downloaded above.
+      #
+      # Do this on all system (not just macOS) to avoid relying on rustc-provided libLLVM.so.
+      - run: cargo install --git https://github.com/aya-rs/bpf-linker.git --no-default-features --force
 
-      - name: Cache test cache
-        uses: actions/cache@v4
+      - uses: actions/cache@v4
         with:
           path: test/.tmp
           key: ${{ runner.arch }}-${{ runner.os }}-test-cache
@@ -329,5 +321,4 @@ jobs:
       - run-integration-test
     runs-on: ubuntu-latest
     steps:
-      - name: Build Complete
-        run: echo "Build Complete"
+      - run: echo 'Build Complete'
