--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,10 +71,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        bpf_target_arch:
+        arch:
           - aarch64-unknown-linux-gnu
           - armv7-unknown-linux-gnueabi
-          - mips-unknown-linux-gnu
           - powerpc64le-unknown-linux-gnu
           - riscv64gc-unknown-linux-gnu
           - s390x-unknown-linux-gnu
@@ -84,10 +83,17 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.arch }}
 
       - uses: Swatinem/rust-cache@v2
 
       - uses: taiki-e/install-action@cargo-hack
+
+      # This is magic, it sets `$CARGO_BUILD_TARGET`.
+      - uses: taiki-e/setup-cross-toolchain-action@v1
+        with:
+          target: ${{ matrix.arch }}
 
       - name: Build
         run: |
@@ -97,6 +103,7 @@ jobs:
             --exclude aya-ebpf-bindings \
             --exclude aya-log-ebpf \
             --exclude integration-ebpf \
+            --exclude xtask \
             --workspace
 
       - name: Test
@@ -110,6 +117,7 @@ jobs:
             --exclude aya-log-ebpf \
             --exclude integration-ebpf \
             --exclude integration-test \
+            --exclude xtask \
             --workspace
 
       - name: Doctests
@@ -124,6 +132,7 @@ jobs:
             --exclude init \
             --exclude integration-ebpf \
             --exclude integration-test \
+            --exclude xtask \
             --workspace
 
   build-test-aya-ebpf:
