introduce workspace lints, warn on unused crates
In practice this will forbid unused dependencies because we run clippy
with `--deny warnings`.

Workspace lints is a nice place to ratchet up lints through the codebase
all at once and consistently.

--- a/aya-log-common/Cargo.toml
+++ b/aya-log-common/Cargo.toml
@@ -11,6 +11,9 @@ homepage.workspace = true
 rust-version.workspace = true
 edition.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 num_enum = { workspace = true }
 
