--- a/Cargo.toml
+++ b/Cargo.toml
@@ -103,6 +103,9 @@ tokio = { version = "1.24.0", default-features = false }
 which = { version = "7.0.0", default-features = false }
 xdpilone = { version = "1.0.5", default-features = false }
 
+[workspace.lints.rust]
+unused-extern-crates = "warn"
+
 [profile.release.package.integration-ebpf]
 debug = 2
 codegen-units = 1
