--- a/ebpf/aya-ebpf-cty/Cargo.toml
+++ b/ebpf/aya-ebpf-cty/Cargo.toml
@@ -10,3 +10,6 @@ repository.workspace = true
 homepage.workspace = true
 rust-version.workspace = true
 edition.workspace = true
+
+[lints]
+workspace = true
