--- a/ebpf/aya-log-ebpf/Cargo.toml
+++ b/ebpf/aya-log-ebpf/Cargo.toml
@@ -9,6 +9,9 @@ homepage.workspace = true
 rust-version.workspace = true
 edition.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 aya-ebpf = { version = "^0.1.1", path = "../aya-ebpf" }
 aya-log-common = { version = "^0.1.15", path = "../../aya-log-common" }
