--- a/init/Cargo.toml
+++ b/init/Cargo.toml
@@ -9,6 +9,9 @@ homepage.workspace = true
 rust-version.workspace = true
 edition.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 anyhow = { workspace = true, features = ["std"] }
 nix = { workspace = true, features = ["fs", "mount", "reboot"] }
