--- a/test/integration-common/Cargo.toml
+++ b/test/integration-common/Cargo.toml
@@ -9,6 +9,9 @@ homepage.workspace = true
 rust-version.workspace = true
 edition.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 aya = { path = "../../aya", optional = true }
 
