chore: Fix clippy panic_handler warnings
Working with aya in vscode will currently show a number of warnings
along the lines of:

```
found duplicate lang item `panic_impl`
the lang item is first defined in crate `std` (which `aya` depends on)
...
second definition in the local crate (`bpf_probe_read`)
```

This comes from feature unification.
integration-test requires the integration-common user feature, which
requires aya, which in turn brings in std.

For this same reason we avoid running clippy across the whole workspace.

We can avoid this issue by using the panic handler from the panic_halt
crate, which implements the same loop {} panic handler we use today.

However, it seems rustc is happy to conditionally link the panic handler
from an external crate without issuing warnings.

Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,11 +80,13 @@ indoc = { version = "2.0", default-features = false }
 libc = { version = "0.2.105", default-features = false }
 log = { version = "0.4", default-features = false }
 netns-rs = { version = "0.1", default-features = false }
+network-types = { version = "0.0.7", default-features = false }
 nix = { version = "0.29.0", default-features = false }
 num_enum = { version = "0.7", default-features = false }
 object = { version = "0.36", default-features = false }
 octorust = { version = "0.10", default-features = false }
 once_cell = { version = "1.20.1", default-features = false }
+panic-halt = { version = "1", default-features = false }
 proc-macro2 = { version = "1", default-features = false }
 proc-macro2-diagnostics = { version = "0.10.1", default-features = false }
 public-api = { version = "0.44.0", default-features = false }
