--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -17,7 +17,8 @@ workspace = true
 aya-ebpf = { path = "../../ebpf/aya-ebpf" }
 aya-log-ebpf = { path = "../../ebpf/aya-log-ebpf" }
 integration-common = { path = "../integration-common" }
-network-types = "0.0.7"
+network-types = { workspace = true }
+panic-halt = { workspace = true }
 
 [build-dependencies]
 which = { workspace = true }
