test-distro: build without cross toolchain
Make the xz2 dependency optional to allow building without a C cross
compiler. This allows clippy.sh to be used on e.g. macOS more easily:

```
./clippy.sh --target x86_64-unknown-linux-gnu --exclude-features xz2
```

--- a/test-distro/Cargo.toml
+++ b/test-distro/Cargo.toml
@@ -35,4 +35,4 @@ nix = { workspace = true, features = [
 ] }
 object = { workspace = true, features = ["elf", "read_core", "std"] }
 walkdir = { workspace = true }
-xz2 = { workspace = true }
+xz2 = { workspace = true, optional = true } # Optional to allow building without a cross toolchain.
