feat: add compio support for aya-log

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ rust-version = "1.85.0"
 anyhow = { version = "1", default-features = false }
 assert_matches = { version = "1.5.0", default-features = false }
 async-io = { version = "2.0", default-features = false }
+async-global-executor = { version = "3.1.0", default-features = false }
 base64 = { version = "0.22.1", default-features = false }
 bindgen = { version = "0.71", default-features = false }
 bitflags = { version = "2.2.1", default-features = false }
@@ -71,6 +72,7 @@ bytes = { version = "1", default-features = false }
 cargo_metadata = { version = "0.19.0", default-features = false }
 clap = { version = "4", default-features = false }
 const-assert = { version = "1.0.1", default-features = false }
+compio = { version = "0.14.0", default-features = false }
 dialoguer = { version = "0.11", default-features = false }
 diff = { version = "0.1.13", default-features = false }
 env_logger = { version = "0.11", default-features = false }
