refactor: change compio features
compio should only enable the runtime feature, and just enable the io-uring feature in aya-log test

--- a/aya-log/Cargo.toml
+++ b/aya-log/Cargo.toml
@@ -32,6 +32,7 @@ async-global-executor = { workspace = true, optional = true }
 compio = { workspace = true, optional = true }
 
 [dev-dependencies]
+compio = { workspace = true, features = ["io-uring"] }
 env_logger = { workspace = true }
 testing_logger = { workspace = true }
 
