--- a/.github/workflows/gen.yml
+++ b/.github/workflows/gen.yml
@@ -41,6 +41,12 @@ jobs:
 
       - uses: peter-evans/create-pull-request@v7
         with:
+          # GitHub actions aren't allowed to trigger other actions to prevent
+          # abuse; the canonical workaround is to use a sufficiently authorized
+          # token.
+          #
+          # See https://github.com/peter-evans/create-pull-request/issues/48.
+          token: ${{ secrets.CRABBY_GITHUB_TOKEN }}
           branch: create-pull-request/codegen
           commit-message: |
             aya-obj, aya-ebpf-bindings: regenerate
