ebpf: add peak() method to Queue and Stack
Signed-off-by: Xiaobo Liu <cppcoffee@gmail.com>

--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -91,3 +91,11 @@ path = "src/xdp_sec.rs"
 [[bin]]
 name = "uprobe_cookie"
 path = "src/uprobe_cookie.rs"
+
+[[bin]]
+name = "queue_test"
+path = "src/queue_test.rs"
+
+[[bin]]
+name = "stack_test"
+path = "src/stack_test.rs"
