--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -95,3 +95,7 @@ path = "src/uprobe_cookie.rs"
 [[bin]]
 name = "queue_test"
 path = "src/queue_test.rs"
+
+[[bin]]
+name = "stack_test"
+path = "src/stack_test.rs"
