aya: add support for BPF_PROG_TYPE_SK_REUSEPORT
Implements SK_REUSEPORT support to enable programmable socket
selection within SO_REUSEPORT groups.

- #[sk_reuseport] macro for eBPF programs
- SkReuseport program type with load/attach methods
- SkReuseportContext with sk_reuseport_md field access
- ReusePortSockArray map for socket management
- SK_PASS/SK_DROP constants for return values
- Documentation and usage examples
- Some integration tests

This allows load balancing decisions to be made programmatically
with SO_REUSEPORT set.

Fixes: #215

--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -69,6 +69,10 @@ name = "simple_prog"
 path = "src/simple_prog.rs"
 
 [[bin]]
+name = "sk_reuseport"
+path = "src/sk_reuseport.rs"
+
+[[bin]]
 name = "strncmp"
 path = "src/strncmp.rs"
 
