--- a/aya-obj/Cargo.toml
+++ b/aya-obj/Cargo.toml
@@ -18,7 +18,7 @@ workspace = true
 
 [dependencies]
 bytes = { workspace = true }
-hashbrown = { workspace = true, default-features = true }
+hashbrown = { workspace = true, features = ["default-hasher", "equivalent"] }
 log = { workspace = true }
 object = { workspace = true, features = ["elf", "read_core"] }
 thiserror = { workspace = true }
